Fix : Collapse component

--- a/src/components/collapse/collapse.scss
+++ b/src/components/collapse/collapse.scss
@@ -35,7 +35,7 @@
 			transform 0.5s ease;
 		background-color: $background-grey;
 		padding: 0 20px;
-		transform: translateY(-150%);
+		transform: translateY(-200%);
 		
 	}
 
